# E2E_Test_Framework

./: .env.example  .gitignore  .pypi-publish-guide.md  COOKBOOK.md  Jenkinsfile  LICENSE  MANIFEST.in  PLAN.md  PRESENTATION.md  README.md  SETUP_GUIDE.md  TODO.md  ckc.py  ckc.yaml  ckc_import.py  ckc_import.yaml  conftest.py  docker-compose.yml  flow_log_file_key_ceremony.py  flow_log_file_signature_verification_20260303_162630.yaml  nonfips.py  nonfips.yaml  pyproject.toml  requirements.txt  userunblock.py  userunblock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
ankole/: __init__.py
ankole/driver/: __init__.py  a11y.py  api_driver.py  api_mock.py  appmanager.py  base.py  db_driver.py  evidence.py  grafana_push.py  health_check.py  log_collector.py  smoke_gate.py  ui_driver.py  visual.py  web_driver.py  zap_scanner.py
ankole/flows/: __init__.py  base.py
ankole/flows/workspace/: __init__.py  member_management.py  project_approval.py
ankole/pages/: __init__.py  base_page.py
ankole/pages/web/: __init__.py  base_web_page.py  dashboard_page.py  login_page.py  member_management_page.py  project_approval_page.py  role_management_page.py
ankole/plugin/: __init__.py  config.py  fixtures.py  flaky_tracker.py  hooks.py  kiwi_hooks.py  metrics.py
ankole/steps/workspace/: __init__.py  login.py  member_management.py  project_approval.py
ankole/testing/: __init__.py  conftest_factory.py  conftest_hooks.py  data_factory.py  parallel.py  security.py
config/: grafana-dashboard.json  grafana-security-load-dashboard.json  prometheus.yml  promtail-config.yml  settings.docker.yaml  settings.yaml
demo/: conftest_demo.py  run_demo.py  seed_kiwi.py  sync_metrics.py
docs/: ARCHITECTURE.md  BRIEF_Framework_Decoupling.md  INTRODUCTION.md  PLAN.md  [Info]Allure-Metada.md  ntp_time_sync_guide.md  remote_agent_guide.md
docs/playground/: README.md  conftest.py  docker-compose.playground.yml
docs/playground/01_getting_started/: README.md  exercise_01_first_test.py
docs/playground/02_web_driver/: README.md  exercise_01_login.py  exercise_02_table_data.py
docs/playground/03_api_driver/: README.md  exercise_01_crud.py  exercise_02_schema_validation.py
docs/playground/04_page_objects/: README.md  exercise_01_create_page.py
docs/playground/05_flows/: README.md  exercise_01_compose_flow.py
docs/playground/06_database_driver/: README.md  exercise_01_assertions.py
docs/playground/07_visual_regression/: README.md  exercise_01_baseline.py
docs/playground/08_accessibility/: README.md  exercise_01_scan.py
docs/playground/09_mocking/: README.md  exercise_01_mock_api.py
examples/consumer-repo-template/: Jenkinsfile  conftest.py  pyproject.toml  requirements.txt
examples/consumer-repo-template/config/: settings.yaml
examples/consumer-repo-template/tests/console/: test_my_tool.py
examples/consumer-repo-template/tests/ui/: test_my_app.py
examples/pkcs11-consumer-template/: .gitignore  Jenkinsfile  README.md  conftest.py  pyproject.toml  requirements.txt
examples/pkcs11-consumer-template/config/: settings.yaml
examples/pkcs11-consumer-template/scripts/: build.bat  build.sh  run_tests.bat  run_tests.sh
examples/pkcs11-consumer-template/tests/console/: test_pkcs11_cpp.py  test_pkcs11_go.py  test_pkcs11_gtest.py  test_pkcs11_java.py
hsm_test_framework/: __init__.py  console_runner.py  evidence.py  grafana_push.py  kiwi_tcms.py  log_collector.py  loki_collector.py  plugin.py  remote_trigger.py  ui_driver.py  window_monitor.py
hsm_test_framework/pages/: __init__.py  base_page.py  ccmk_import_page.py  dashboard_page.py  kc_login_page.py  key_ceremony_page.py  login_page.py  password_change_page.py  profile_management_page.py  terms_page.py  user_creation_page.py  user_management_page.py
remote_agent/: agent.py  requirements.txt
sample_apps/api/: Dockerfile  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py
sample_apps/cli/: Dockerfile  cli.py
sample_apps/db/: init.sql
sample_apps/web_app/: Dockerfile  app.py  requirements.txt
scripts/: check_tcms_mapping.py  inspect_app.py  run_tests.bat  run_tests.sh  setup.bat  setup.sh  test.py
sphere_e2e_test_framework/: __init__.py
sphere_e2e_test_framework/driver/: __init__.py  appmanager.py  base.py  cli_driver.py  config_validator.py  console_runner.py  evidence.py  kiwi_tcms.py  ui_driver.py
sphere_e2e_test_framework/flows/: __init__.py  base.py  e_admin.py
sphere_e2e_test_framework/pages/: __init__.py  base_page.py
sphere_e2e_test_framework/plugin/: __init__.py  config.py  fixtures.py  hooks.py  kiwi_hooks.py  metrics.py
sphere_e2e_test_framework/steps/: __init__.py  e_admin.py
sphere_e2e_test_framework/testing/: __init__.py  conftest_factory.py  conftest_hooks.py  conftest_utils.py
tests/: schema.py  test_data.py
tests/api/: conftest.py  test_auth.py  test_db_assertions.py  test_health_api.py  test_members_api.py  test_projects_api.py  test_roles_api.py  test_security.py
tests/cli/: conftest.py  test_cli_auth.py  test_cli_members.py  test_cli_projects.py
tests/console/: test_pkcs11_sample.py
tests/desktop/: conftest.py  test_calculator_sample.py
tests/load/: __init__.py
tests/security/: __init__.py  conftest.py  payloads.py  test_a01_broken_access_control.py  test_a02_cryptographic_failures.py  test_a03_injection.py  test_a05_security_misconfiguration.py  test_a07_xss.py  test_a09_security_logging.py  test_zap_active_scan.py  test_zap_passive_scan.py
tests/ui/: conftest.py  e-admin.py  test_sample_app.py
tests/unit/: test_api_mock.py  test_api_schema_validation.py  test_config_flexibility.py  test_conftest_factory.py  test_data_factory.py  test_db_driver.py  test_decoupling.py  test_flaky_tracker.py  test_flow_retry.py  test_parallel.py  test_plugin_decomposition.py  test_visual.py
tests/web/: conftest.py  test_a11y_login.py  test_browser_mock.py  test_dashboard_navigation.py  test_login.py  test_member_crud.py  test_member_suspend_reactivate.py  test_project_approval_workflow.py  test_visual_login.py
(+110 files in other folders)
