[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsm-test-framework"
version = "1.2.0"
description = "Reusable E2E test framework for Windows apps and console tools (PKCS#11, HSM)"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4.0",
    "pytest-ordering>=0.6",
    "pytest-timeout>=2.2.0",
    "allure-pytest>=2.13.0",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "tcms-api>=12.0",
]

[project.optional-dependencies]
# Windows-only: UI automation
ui = ["pywinauto>=0.6.8"]
# Grafana/Prometheus metrics
metrics = ["prometheus-client>=0.20.0"]
# All optional dependencies
all = [
    "pywinauto>=0.6.8",
    "prometheus-client>=0.20.0",
]

# Auto-register pytest plugin so consumer repos get fixtures/hooks for free
[project.entry-points.pytest11]
hsm_test_framework = "hsm_test_framework.plugin"

[tool.setuptools.packages.find]
include = ["hsm_test_framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ui: Windows UI automation tests",
    "console: Console/CLI based tests",
    "pkcs11: PKCS#11 related tests",
    "smoke: Quick smoke tests",
    "regression: Full regression tests",
    "critical: Critical path tests that must pass",
    "e_admin: E-Admin application specific tests",
    "slow: Tests that take longer than 30 seconds",
    "tcms(case_id): Map this test to a specific Kiwi TCMS TestCase ID",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=no",
    "--alluredir=evidence/allure-results",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 120
filterwarnings = [
    "ignore:Revert to STA COM threading mode:UserWarning",
]
