[project]
name = "my-hsm-app-tests"
version = "1.0.0"
description = "E2E tests for My HSM Application"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--alluredir=evidence/allure-results",
]
log_cli = true
log_cli_level = "INFO"
timeout = 120
